--- a/LiteratureValidation/pyproject.toml
+++ b/LiteratureValidation/pyproject.toml
@@ -1,15 +1,11 @@
 [project]
 name = "literature-validation"
-version = "0.1.0"
-description = "Literature Validation MCP Server - Validate PhysiCell cell rules against PubMed literature using PaperQA2"
+version = "0.2.0"
+description = "Literature Validation MCP Server - Validate PhysiCell cell rules against published literature using Edison PaperQA3"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.14.4",
-    "paper-qa>=5",
+    "edison-client",
     "httpx>=0.27",
-    "coredis>=4",
-    "metapub>=0.5",
-    "pypdf[image]",
-    "setuptools<72",
 ]
