Add SpatialTissue MCP server for spatial statistics panel analysis
New server (SpatialTissue/server.py) wraps spatialtissuepy with 10 lean
tools so an agent can build composable metric panels and run Spatial LDA,
cell-graph network analysis, and topological Mapper on PhysiCell output.

Key design decisions:
- Minimal 1-sentence tool docstrings keep context window clean; the full
  metric catalogue (26+ metrics, parameter reference, interpretation guide)
  lives in SpatialTissue/spatial-analysis/SKILL.md, loaded only on
  /spatial-analysis invocation
- Lazy-load block for all spatialtissuepy deps mirrors the PhysiCell pcdl
  pattern — startup stays <1s when library is absent
- Panel builder pattern: agent adds metrics one-at-a-time via add_metric /
  load_preset_panel, then run_panel executes all across every timestep

Files added:
- SpatialTissue/server.py — 10 tools (session mgmt, panel builder, LDA,
  network analysis, Mapper)
- SpatialTissue/session_manager.py — PanelEntry + SpatialAnalysisSession
  dataclasses, thread-safe SessionManager with LRU eviction (max 15)
- SpatialTissue/spatial-analysis/SKILL.md — full capability catalogue and
  workflow guide
- tests/test_spatial_analysis_session_manager.py — 33 pytest tests
  (all pass); covers CRUD, panel mutation, LRU eviction, ensure_session

Files updated:
- PhysiCell/physicell-simulation/SKILL.md: add step 9 SpatialTissue pointer
- README.md: add server to table and cross-server workflow diagram
- pyproject.toml: add [project.optional-dependencies] spatial group
- .github/workflows/ci.yml: add SpatialTissue/session_manager.py to ruff
  and mypy targets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
             MaBoSS/session_manager.py \
             NeKo/session_manager.py \
             PhysiCell/session_manager.py \
+            SpatialTissue/session_manager.py \
             tests/
 
       # ------------------------------------------------------------------ #
@@ -46,7 +47,8 @@ jobs:
             artifact_manager.py \
             MaBoSS/session_manager.py \
             NeKo/session_manager.py \
-            PhysiCell/session_manager.py
+            PhysiCell/session_manager.py \
+            SpatialTissue/session_manager.py
 
       # ------------------------------------------------------------------ #
       # Unit tests                                                           #
