--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,8 @@ dependencies = [
     "cairosvg>=2.7.0",
     "pillow>=10.0.0",
 ]
+
+[project.optional-dependencies]
+spatial = [
+    "spatialtissuepy[viz,network]>=0.2.0",
+]
